--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
           <div id="content">
             <%= render 'layouts/navbar' %>
             <%= render 'layouts/flash_messages' %>
-            <div class="container-sm container-md container-lg container-xl container-xxl"></div>
-            <%= yield %>
+            <div class="container-fluid container-sm container-md container-lg container-xl container-xxl">
+              <%= yield %>
             </div>
             <%#= toastr_flash %>
           </div>
