--- a/app/views/apis/_form.html.erb
+++ b/app/views/apis/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for( [@client, @api] ) do |form| %>
     <div class="container">
-        <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card w-75">
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
