--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container_setting">
   <div class="d-sm-flex align-items-center justify-content-between mb-4 row">
     <h1 class="h3 mb-0 text-gray-800 client" >Clients</h1>
-    <%= link_to "Add Client" , new_client_path , class: "btn btn-primary float-right responesive_button" %>
+    <%= link_to "Add Client" , new_client_path , class: "btn btn-primary float-right" %>
   </div>
 </div>
 
