--- a/app/views/documents/_document.html.erb
+++ b/app/views/documents/_document.html.erb
@@ -1,5 +1,5 @@
-<%= turbo_frame_tag dom_id(document), class: "card shadow col-md-4" do %>
-    <div class="card-body">
+<%= turbo_frame_tag dom_id(document), class: "card shadow" do %>
+    <div class="card-body card_style">
         <% if document.data.present? && (document.data.kind_of?(Hash) || document.data.kind_of?(Object)) %>
             <% document.data.keys.each do |key| %>
                 <% if key.include?('invoice') %>
