--- a/app/views/documents/_filter_form.html.erb
+++ b/app/views/documents/_filter_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(:search, class: 'form-inline', url: vendor_documents_path, method: :get) do |form| %>
-    <div class="row ml-2">
-        <div class="form-group ml-2">
+    <div class="display_flex">
+        <div class="form-group">
             <%= form.date_field :from_date, data: { behavior: 'daterangepicker' } , class: "form-control datepicker " %>
         </div>
         <div class="form-group ml-2">
@@ -9,6 +9,5 @@
         <div class="form-group ml-2">
             <%= form.submit "Search", class: 'btn btn-primary' %>
         </div>
-        <div class="col-sm-6 col-md-4"></div>
     </div>
 <% end %>
