--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,14 +1,11 @@
 <%= turbo_stream_from "document_groups" %>
 <%= turbo_stream_from "documents" %>
 
-<div class="row">
+<div class="row align-items-center">
   <div class="col-md-10">
     <%= render 'filter_form' %>
   </div>
-  <div class="col-md-2">
-    <%= link_to '', fetch_data_client_vendor_path(@vendor.client, @vendor), method: :post, class: "btn btn-primary fa fa-paper-plane ml-4 mr-1"%>
-    <%= link_to "Back" , client_vendors_path(@vendor.client_id), class: "btn btn-primary"%>
-  </div>
+  <%= render partial: "buttons", locals: { vendor: @vendor} %>
 </div>
 
 <%= turbo_frame_tag "document_groups" do %>
