--- a/app/views/clients/_buttons.html.erb
+++ b/app/views/clients/_buttons.html.erb
@@ -1,4 +1,4 @@
- <div class="col-xs-3 col-md-4 col-ms-4 icon_setting">
+ <div>
     <%= link_to '', fetch_token_client_path(client), method: :post, class: "action-icons fa fa-paper-plane"%>
     <%= link_to '', client_vendors_path(client), data: { turbo: false }, class: "action-icons fa fa-users"%>
     |
