responsiveness for invoice page

--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -6,7 +6,7 @@
         </a>
         <div class="collapse show" id="collapse_<%= client.id %>">
             <div class="card-body">
-                <div class="row display_flex icon_settings">
+                <div class="display_flex icon_settings">
                     <div>
                         <strong>UserName: </strong> <%= client.username %>
                         <strong>Password: </strong> <%= client.password %>
