--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -15,7 +15,6 @@
                   </div>
                   <div class="col-sm-6">
                     <%= form.text_field :company_name ,class: "form-control form-control-user",placeholder: "Company Name" ,id: "exampleLastName" %>
-
                   </div>
                 </div>
                 <div class="form-group">
@@ -23,6 +22,27 @@
                 </div>
                 <div class="col-sm-6 row">
                   <%= form.text_field :password ,class: "form-control form-control-user",placeholder: "Password" ,id: "exampleInputPassword" %>
+                </div>
+                <div class="mt-4">
+                  <label for="FTP Server Details">FTP Server Details</label>
+                </div>
+                <div class="form-group row">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
+                    <%= form.text_field :ftp_host ,class: "form-control form-control-user",placeholder: "FTP Host" ,id: "exampleInputPassword" %>
+                  </div>
+                  <div class="col-sm-6">
+                    <%= form.text_field :ftp_port ,class: "form-control form-control-user",placeholder: "FTP Port" ,id: "exampleInputPassword" %>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
+                    <%= form.text_field :ftp_user ,class: "form-control form-control-user",placeholder: "FTP User" ,id: "exampleInputPassword" %>
+                  </div>
+                  <div class="col-sm-6">
+                    <%= form.text_field :ftp_password ,class: "form-control form-control-user",placeholder: "FTP Password" ,id: "exampleInputPassword" %>
+                  </div>
+                </div>
+                <div class="col-sm-6 row">
                 </div>
                 <%= form.fields_for :login_api do |ff| %>
                 <br />
