--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <%= turbo_frame_tag "clients" do %>
-  <div class="row">
+  <div class="row"  style="width: 102%;">
     <%= render @clients %>
   </div>
 <% end %>
