--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
           <div id="content">
             <%= render 'layouts/navbar' %>
             <%= render 'layouts/flash_messages' %>
-            <div class="container-fluid container-sm container-md container-lg container-xl container-xxl">
+            <div class="container-fluid">
               <%= yield %>
             </div>
             <%#= toastr_flash %>
