Document amount set

--- a/app/views/document_groups/show.xls.erb
+++ b/app/views/document_groups/show.xls.erb
@@ -16,9 +16,9 @@
             <td><%= document&.data['vendor_invoice_no'] %></td>
             <td><%= document&.data['vendor_invoice_date']&.to_date&.strftime('%d-%m-%Y') %></td>
             <td><%= nil %></td>
-            <td><%= document&.data['vendor_invoice_amount'].to_f %></td>
+            <td><%= (document&.data['vendor_invoice_amount']&.to_f - document&.data['vendor_invoice_tax']&.to_f) %></td>
             <td><%= document&.data['vendor_invoice_tax'].to_f %></td>
-            <td><%= (document&.data['vendor_invoice_amount']&.to_f + document&.data['vendor_invoice_tax']&.to_f) %></td>
+            <td><%= document&.data['vendor_invoice_amount'].to_f %></td>
         </tr>
     <% end %>
 </table>
