APIs rework for payment data in documents, CSV and XLS

--- a/app/views/apis/_form.html.erb
+++ b/app/views/apis/_form.html.erb
@@ -14,7 +14,7 @@
                                         <%= form.text_field :api_url ,:required => true,class: "form-control form-control-user", placeholder: "API URL" %>
                                     </div>
                                     <div class="form-group">
-                                        <%= form.text_field :document_type ,class: "form-control form-control-user", placeholder: "decoument Type" %>
+                                        <%= form.text_field :document_type ,class: "form-control form-control-user", placeholder: "Document Type" %>
                                     </div>
                                     <div class="form-group">
                                         <%= form.label :api_method ,class: "h6 text-gray-900 mb-4" %>
